# autogen/openapi_server/controllers/default_controller.py
@@ -1,6 +1,7 @@
 import connexion
 import six
 
+from openapi_server.models.actor import Actor  # noqa: E501
 from openapi_server.models.average_each_year import AverageEachYear  # noqa: E501
 from openapi_server.models.director import Director  # noqa: E501
 from openapi_server.models.movie import Movie  # noqa: E501
@@ -50,7 +51,7 @@ def controller_get_average_score_of_actor(actor_name):  # noqa: E501
     :param actor_name: 
     :type actor_name: str
 
-    :rtype: float
+    :rtype: Actor
     """
     return 'do some magic!'
 
