# autogen/openapi_server/models/__init__.py
@@ -3,6 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from openapi_server.models.actor import Actor
 from openapi_server.models.average_each_year import AverageEachYear
 from openapi_server.models.director import Director
 from openapi_server.models.movie import Movie
